[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxodr"
version = "0.1.0"
authors = [
    { name="Hugh Blayney", email="hugh@drisk.ai" },
]
description="Read OpenDRIVE files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/driskai/pyxodr"