[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.1.3"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "pyxodr"
authors = [
    { name="Hugh Blayney", email="hugh@drisk.ai" },
]
description="Read OpenDRIVE files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml>=4.9.1",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "rich>=12.6.0",
    "scipy>=1.7.0",
    "Shapely>=1.8.4",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["pyxodr", "pyxodr.*"]

[project.urls]
"Homepage" = "https://github.com/driskai/pyxodr"